# jprop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
test_crate/: Cargo.toml
test_crate/src/: lib.rs
test_crate/tests/: read_test.rs  t14.properties  t15.properties  t2.properties  t4.properties  t7.properties  test.properties  test.rs  write_test.rs
tests/: t1.properties  t3.properties  t6.properties  t8.properties  test.rs
